--- a/src/resource.rc
+++ b/src/resource.rc
@@ -170,12 +170,12 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 0, 0, 215, 240
+IDD_SETTINGS DIALOGEX 0, 0, 215, 245
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 210, WS_EX_CONTROLPARENT
+	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 215, WS_EX_CONTROLPARENT
 
 	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 5, 3, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 18, 180, 14, BS_NOTIFY | WS_TABSTOP
@@ -187,9 +187,10 @@ BEGIN
 	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 108, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 123, 180, 14, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 138, 145, 14, BS_NOTIFY | WS_TABSTOP
-	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 150, 140, 33, 13, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
-	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 153, 180, 14, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Use logger.exe for debugging", IDC_DLG_USE_LOGGER, 5, 168, 180, 14, BS_NOTIFY | WS_TABSTOP | BS_NOTIFY
+	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 150, 139, 33, 13, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	AUTOCHECKBOX "Enable AI features", IDC_DLG_ENABLE_AI, 5, 153, 180, 14, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 168, 180, 14, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use logger.exe for debugging", IDC_DLG_USE_LOGGER, 5, 168 + 15, 180, 14, BS_NOTIFY | WS_TABSTOP | BS_NOTIFY
 
 	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7, 20, 14, SS_LEFT
 	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5, 129, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -238,17 +239,8 @@ BEGIN
 	LTEXT "Google API key", IDC_DLG_GOOGLE_KEY_LABEL, 5, 80, 150, 10, SS_LEFT
 	EDITTEXT IDC_DLG_GOOGLE_KEY, 5, 90, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
 
-	LTEXT "Value viewers respository", IDC_DLG_VIEWER_REPOSITORY_LABEL, 5, 108, 152, 10, SS_LEFT
-	EDITTEXT IDC_DLG_VIEWER_REPOSITORY, 5, 118, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
-
-	LTEXT "Column modifiers respository", IDC_DLG_MODIFIER_REPOSITORY_LABEL, 5, 108 + 28, 152, 10, SS_LEFT
-	EDITTEXT IDC_DLG_MODIFIER_REPOSITORY, 5, 118 + 28, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
-
-	LTEXT "SQLite extension respository", IDC_DLG_EXTENSION_REPOSITORY_LABEL, 5, 146 + 18, 152, 10, SS_LEFT
-	EDITTEXT IDC_DLG_EXTENSION_REPOSITORY, 5, 156 + 18, 190, 11, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN
-
-	PUSHBUTTON "OK", IDC_DLG_OK, 86, 221, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 221, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 86, 226, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 226, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -849,6 +841,7 @@ BEGIN
 	BEGIN
 		MENUITEM "Save\tCtrl+S", IDM_SAVE
 		MENUITEM "Plan\tAlt+Enter", IDM_PLAN, GRAYED
+		MENUITEM "Explain\tShift+Enter", IDM_AI_EXPLAIN, GRAYED
 		MENUITEM "Execute\tCtrl+Enter", IDM_EXECUTE, GRAYED
 		MENUITEM "Batch\tCtrl+Alt+Enter", IDM_EXECUTE_BATCH, GRAYED
 		MENUITEM SEPARATOR
@@ -1061,11 +1054,11 @@ BEGIN
 		MENUITEM "Comment\tCtrl+/", IDM_EDITOR_COMMENT
 		MENUITEM "Format\tCtrl+T", IDM_EDITOR_FORMAT
 		MENUITEM "Compare\tCtrl+D", IDM_EDITOR_COMPARE
+		MENUITEM "Fix error\tCtrl+J", IDM_EDITOR_FIX_ERROR
 		MENUITEM SEPARATOR
 		MENUITEM "Cut\tCtrl+X", IDM_EDITOR_CUT
 		MENUITEM "Copy\tCtrl+C", IDM_EDITOR_COPY
 		MENUITEM "Paste\tCtrl+V", IDM_EDITOR_PASTE
-		MENUITEM "Delete\tDel", IDM_EDITOR_DELETE
 		MENUITEM SEPARATOR
 		MENUITEM "Find\tCtrl+R", IDM_EDITOR_FIND
 	END
@@ -1231,6 +1224,30 @@ BEGIN
 	END
 END
 
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_AI MENU
+BEGIN
+	POPUP "AI"
+	BEGIN
+		MENUITEM "Help", IDM_AI_HELP
+		MENUITEM SEPARATOR
+		MENUITEM "Allow DB access", IDM_AI_DB_ACCESS
+		MENUITEM "Explain execution errors", IDM_AI_EXPLAIN_ERRORS
+		MENUITEM "Execute non-sql queries", IDM_AI_PROCESS_NOSQL
+		MENUITEM "Format queries", IDM_AI_DO_FORMAT
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_AI_CHAT MENU
+BEGIN
+	POPUP "AI Chat"
+	BEGIN
+		MENUITEM "Copy\tCtrl+C", IDM_AI_CHAT_COPY
+		MENUITEM "Execute\tF12", IDM_AI_CHAT_EXECUTE
+	END
+END
+
 IDA_ACCEL ACCELERATORS
 BEGIN
 	VK_ESCAPE, IDM_ESCAPE, VIRTKEY
@@ -1238,6 +1255,7 @@ BEGIN
 	"O", IDM_OPEN, CONTROL, VIRTKEY
 	"Q", IDM_CLOSE, CONTROL, VIRTKEY
 	VK_F5, IDM_REFRESH, VIRTKEY
+	VK_RETURN, IDM_AI_EXPLAIN, SHIFT, VIRTKEY
 	VK_RETURN, IDM_EXECUTE, CONTROL, VIRTKEY
 	VK_F9, IDM_EXECUTE, VIRTKEY
 	VK_RETURN, IDM_EXECUTE_BATCH, CONTROL ALT, VIRTKEY
@@ -1245,10 +1263,10 @@ BEGIN
 	VK_F12, IDM_EXECUTE_CURRENT_LINE, VIRTKEY
 	VK_RETURN, IDM_PLAN, ALT, VIRTKEY
 	VK_F8, IDM_PLAN, VIRTKEY
-	VK_F8, IDM_PLAN_SELECTION, ALT, VIRTKEY
 	"S", IDM_SAVE, CONTROL, VIRTKEY
 	"H", IDM_HISTORY, CONTROL, VIRTKEY
 	"G", IDM_GISTS, CONTROL, VIRTKEY
+	VK_OEM_5, IDM_AI_CHAT, CONTROL ALT, VIRTKEY
 
 	VK_TAB, IDM_CHANGE_FOCUS, CONTROL SHIFT, VIRTKEY
 	VK_TAB, IDM_NEXT_RESULT, CONTROL, VIRTKEY
@@ -1280,7 +1298,8 @@ BEGIN
 		"Ctrl + Q - Close database\n" \
 		"Ctrl + N - New editor\n" \
 		"Ctrl + Alt + Escape/Backspace - Close the current editor\n" \
-		"Ctrl + Alt + Left/Right - Toggle the editor's tab or switch between data windows\n\n" \
+		"Ctrl + Alt + Left/Right - Toggle the editor's tab or switch between data windows\n" \
+		"Ctrl + Alt + \\ - Show/Hide AI Chat\n\n" \
 		"Navigation tree\n" \
 		"Ctrl + F - show find-in-tree filter\n" \
 		"Ctrl + C - copy the text of the selected item to the clipboard\n" \
@@ -1422,8 +1441,10 @@ BEGIN
 	IDS_TOOLTIP_CLOSE "Close database"
 	IDS_TOOLTIP_SAVE "Save current query"
 	IDS_TOOLTIP_PLAN "View execution plan of query"
+	IDS_TOOLTIP_EXPLAIN "Explain query by AI"
 	IDS_TOOLTIP_EXECUTE "Execute query"
 	IDS_TOOLTIP_INTERRUPT "Interrupt query"
+	IDS_TOOLTIP_CHAT "Show/Hide AI Chat"
 
 	IDS_TOOLTIP_ROW_REFRESH "Refresh data"
 	IDS_TOOLTIP_ROW_ADD "Add row"
